--- a/projects/android/app/src/main/res/layout/page_settings.xml
+++ b/projects/android/app/src/main/res/layout/page_settings.xml
@@ -143,6 +143,41 @@
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:orientation="horizontal"
+            android:layout_marginTop="20dp">
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:layout_gravity="center"
+                android:layout_margin="16dp"
+                android:src="@drawable/game_controller_2_drawable"/>
+
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="8">
+
+                <Button
+                    android:id="@+id/ui_controls_layout_edit_btn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="8"
+                    android:gravity="center_vertical"
+                    android:layout_centerVertical="true"
+                    android:text="@string/ui_controls_edit_lbl"/>
+            </RelativeLayout>
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:background="@android:color/darker_gray"
+            android:layout_height="1dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:orientation="horizontal"
             android:id="@+id/ui_controls_settings"
             android:layout_marginTop="20dp">
 
@@ -174,52 +209,6 @@
                     android:id="@+id/ui_controls_settings_checkbox"
                     android:layout_weight="1"
                     android:layout_gravity="left" />
-            </LinearLayout>
-        </LinearLayout>
-
-        <View
-            android:layout_below="@+id/ui_up_container"
-            android:layout_width="match_parent"
-            android:background="@android:color/darker_gray"
-            android:layout_height="1dp"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:orientation="horizontal"
-            android:id="@+id/dpad_scale_settings"
-            android:layout_marginTop="20dp">
-
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:layout_gravity="center"
-                android:layout_margin="16dp"
-                android:src="@drawable/dpad_icon_drawable"/>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_gravity="center"
-                android:layout_weight="8">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="@string/dpad_scale_size_lbl"/>
-
-                <SeekBar
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:id="@+id/dpad_scale_settings_bar"
-                    android:layout_weight="1"
-                    android:layout_gravity="center"
-                    android:indeterminate="false"
-                    android:max="100" />
             </LinearLayout>
         </LinearLayout>
 
