--- a/projects/android/app/src/main/res/layout/page_credits.xml
+++ b/projects/android/app/src/main/res/layout/page_credits.xml
@@ -16,10 +16,11 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/app_version_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:text="@string/copyright"/>
+                android:text="@string/app_version_text"/>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
