--- a/projects/android/app/src/main/res/layout/page_lobby.xml
+++ b/projects/android/app/src/main/res/layout/page_lobby.xml
@@ -35,6 +35,7 @@
 
     <Button
         android:id="@+id/btnPrivateRooms"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0"
@@ -47,7 +48,7 @@
         android:layout_weight="0">
         <Button
             android:id="@+id/btnJoinRoom"
-            android:text="@string/join"
+            android:text="@string/join_public_room"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
