+ android: added support for cheats

--- a/projects/android/app/src/main/res/menu/menu_game.xml
+++ b/projects/android/app/src/main/res/menu/menu_game.xml
@@ -48,6 +48,9 @@
                 </group>
             </menu>
         </item>
+
+        <item android:id="@+id/action_cheats" android:title="@string/cheats"
+            android:orderInCategory="100" app:showAsAction="never" />
     </group>
     <group android:id="@+id/menu_remote_control_group">
         <item android:id="@+id/action_chat"
