- re-decorate settings page
categorise the settings

--- a/projects/android/app/src/main/res/layout/page_settings.xml
+++ b/projects/android/app/src/main/res/layout/page_settings.xml
@@ -13,6 +13,21 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:textAllCaps="true"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/sound_settings_lbl"
+            />
+        <View
+            android:layout_below="@+id/ui_up_container"
+            android:layout_width="match_parent"
+            android:background="@android:color/darker_gray"
+            android:layout_height="1dp"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
@@ -103,6 +118,20 @@
             android:background="@android:color/darker_gray"
             android:layout_height="1dp"/>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:textAllCaps="true"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/controller_settings_lbl"
+            />
+        <View
+            android:layout_below="@+id/ui_up_container"
+            android:layout_width="match_parent"
+            android:background="@android:color/darker_gray"
+            android:layout_height="1dp"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="70dp"
@@ -257,49 +286,22 @@
         </LinearLayout>
 
         <View
-            android:layout_below="@+id/ui_up_container"
             android:layout_width="match_parent"
             android:background="@android:color/darker_gray"
             android:layout_height="1dp"/>
 
-        <LinearLayout
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:orientation="horizontal"
-            android:layout_marginTop="20dp">
-
-            <ImageView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:layout_gravity="center"
-                android:layout_margin="16dp"
-                android:src="@drawable/refresh_drawable"/>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_gravity="center"
-                android:layout_weight="8">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="@string/enable_autosearch_on_resume"/>
-
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:id="@+id/enable_auto_search_on_resume_checkbox"
-                    android:layout_weight="1"
-                    android:layout_gravity="left" />
-            </LinearLayout>
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:textAllCaps="true"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/video_settings_lbl"
+            />
 
         <View
+            android:layout_below="@+id/ui_up_container"
             android:layout_width="match_parent"
             android:background="@android:color/darker_gray"
             android:layout_height="1dp"/>
@@ -426,6 +428,65 @@
                     android:layout_weight="3"
                     android:layout_gravity="center"
                     android:spinnerMode="dropdown"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <View
+            android:layout_below="@+id/ui_up_container"
+            android:layout_width="match_parent"
+            android:background="@android:color/darker_gray"
+            android:layout_height="1dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:textAllCaps="true"
+            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/misc_settings_lbl"
+            />
+
+        <View
+            android:layout_below="@+id/ui_up_container"
+            android:layout_width="match_parent"
+            android:background="@android:color/darker_gray"
+            android:layout_height="1dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp">
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="2"
+                android:layout_gravity="center"
+                android:layout_margin="16dp"
+                android:src="@drawable/refresh_drawable"/>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:layout_gravity="center"
+                android:layout_weight="8">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:text="@string/enable_autosearch_on_resume"/>
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:id="@+id/enable_auto_search_on_resume_checkbox"
+                    android:layout_weight="1"
+                    android:layout_gravity="left" />
             </LinearLayout>
         </LinearLayout>
 
